--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -7,5 +7,6 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Data source=datingapp.db"
-  }
+  },
+  "TokenKey": "super secret key that is super secret and super unguesable and you will never guess it"
 }
